--- a/styles/style.css
+++ b/styles/style.css
@@ -8,14 +8,6 @@ body {
   font-family: "Fira Sans", sans-serif;
 }
 
-section {
-  margin: 150px 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 header {
   width: 100%;
   background-color: indigo;
@@ -25,23 +17,78 @@ header {
   text-align: center;
 }
 
+section {
+  margin: 150px 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-container {
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-rows: repeat(2, 300px);
+  margin: 100px 20px;
+  display: grid;
+  column-gap: 20px;
+  row-gap: 20px;
+}
+
+.grid-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: lavender;
+  height: auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  position: relative;
+}
+
+.grid-item:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
 button {
   border: none;
   display: block;
   padding: 10px;
   border-radius: 10px;
-  width: 200px;
+  width: 90%;
   background-color: indigo;
   color: white;
-  font-size: 20px;
+  font-size: 16px;
   text-transform: uppercase;
+  font-weight: bold;
+}
+
+#fadeOut-button,
+#fadeIn-button {
+  width: 40%;
+  margin: 0 0 0 5px;
+}
+
+.button-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.image-container {
+  height: 200px;
+  width: 100%;
+  margin: 10px 0;
+  position: absolute;
+  bottom: 0px;
 }
 
 img {
-  width: 400px;
-  margin: 10px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-#cat-image {
+#puppy-image {
   display: none;
 }
